<resources>
    <string name="app_name">RoomPractice2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_notes">My Notes</string>
    <string name="search_note">Search note</string>
    <string name="add_note">Add Note</string>
    <string name="note_title">Note title</string>
    <string name="type_note_here">Type note here...</string>
    <string name="details">Details</string>
</resources>